# evimon

./: README.md  pyproject.toml
examples/: run_sampling_examples.py
examples/domains/: DataDriftTestPreset.json  TestNumberOfDriftedColumns.json  TestShareOfDriftedColumns.json
extensions/: data_objects.py  sampling.py  sampling_accumulators.py
metric_test_examples/: TestNumberOfDriftedColumns.json
src/evidently_extensions/sampling/: accumulators.py  sampler.py  transformers.py
src/evidently_extensions/sampling/resources/: TestShareOfDriftedColumns.json
src/resources/: DataDriftPreset.json  DatasetDriftMetric.json
tests/evidently_extensions/sampling/: test_accumulators.py  test_sampler.py  test_transformers.py
